RESOLVED FIXED50154
[GTK] Null-check needed in DRT's AccessibilityUIElement::allAtributes()
https://bugs.webkit.org/show_bug.cgi?id=50154
Summary [GTK] Null-check needed in DRT's AccessibilityUIElement::allAtributes()
Mario Sanchez Prada
Reported 2010-11-29 07:12:30 PST
Currently, we're getting the following stderr output when running LayoutTests/accessibility/non-data-table-cell-title-ui-element.html: atk_object_get_attributes: assertion `ATK_IS_OBJECT (accessible)' failed ...which is caused because of the following function in DRT is not properly checking m_element, as it's done in the rest of the functions.
Attachments
Patch proposal (2.04 KB, patch)
2010-11-29 08:27 PST, Mario Sanchez Prada
no flags
Patch proposal (2.07 KB, patch)
2010-11-29 08:43 PST, Mario Sanchez Prada
mrobinson: review+
Mario Sanchez Prada
Comment 1 2010-11-29 08:27:00 PST
Created attachment 75028 [details] Patch proposal Attached -yet another really simple- patch to fix this issue, found while working on bug 50062 (unrelated, though)
Mario Sanchez Prada
Comment 2 2010-11-29 08:43:01 PST
Created attachment 75034 [details] Patch proposal Sorry, need to sleep better the night before when I'm planning to multitask as I'm doing today... Now attaching the right patch
Martin Robinson
Comment 3 2010-11-29 08:45:56 PST
Comment on attachment 75034 [details] Patch proposal Looks good. No test needed for this, as it should fix an issue observed during tests.
Mario Sanchez Prada
Comment 4 2010-11-29 09:24:24 PST
WebKit Review Bot
Comment 5 2010-11-29 10:35:53 PST
http://trac.webkit.org/changeset/72804 might have broken Leopard Intel Release (Tests)
Note You need to log in before you can comment on or make changes to this bug.