2010-11-29  Mario Sanchez Prada  <msanchez@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Null-check needed in DRT's AccessibilityUIElement::allAtributes()
        https://bugs.webkit.org/show_bug.cgi?id=50154

        Added missing checks to allAttributes().

        * DumpRenderTree/gtk/AccessibilityUIElementGtk.cpp:
        (AccessibilityUIElement::allAttributes): Added missing checks.

Canonical link: https://commits.webkit.org/63263@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72804 268f45cc-cd09-0410-ab3c-d52691b4dbfc